# errors

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CLAUDE.md  LICENSE  README.rst  justfile  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst  mixin_errorlist.rst  return_value.rst
docs/reference/: base.rst  listerrors.rst
src/errors/: __init__.py  base.py  data_classes.py  error.py  mixin.py  settings.py
tests/: test_enumerator.py  test_errors.py  test_mixin.py  test_return_value.py
