[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "error-manager"
version = "1.4.4"
description = "Manage error codes, descriptions and data in a unified way throughout a project"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Maarten de Ruyter", email = "maarten@geodatagarden.com" }
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=4.0.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.3",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
"Documentation" = "https://dg-error-manager.readthedocs.io/en/stable/"
"Source" = "https://github.com/MaartendeRuyter/errors"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "C901",  # max-complexity-10
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
show_error_context = true
pretty = true
namespace_packages = true
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "tox>=4.32.0",
    "tox-uv>=0.1.0",
]
